--- a/Playthrough/MainWindow.xaml
+++ b/Playthrough/MainWindow.xaml
@@ -7,11 +7,12 @@
         mc:Ignorable="d"
         Title="Playthrough" Height="450" Width="800" Foreground="#00000000">
     <Grid>
-        <Grid Background="White" Height="104
+        <Grid Height="104
               " Width="200" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Button x:Name="BtStart" Content="Start" HorizontalAlignment="Center" Margin="-100,12,0,0" VerticalAlignment="Top" Width="75" Click="BtStart_Click"/>
             <Button x:Name="BtStop" Content="Stop" HorizontalAlignment="Center" Margin="112,0,12,72" VerticalAlignment="Bottom" Width="75" Click="BtStop_Click"/>
-            <ProgressBar x:Name="VolumeBar" HorizontalAlignment="Center" Height="20" Margin="10,50,14,0" VerticalAlignment="Top" Width="175" Orientation="Horizontal" Foreground="White" RenderTransformOrigin="0.5,0.5" BorderBrush="Black" Value="100">
+            <Border HorizontalAlignment="Center" Height="20" Margin="0,50,0,0" VerticalAlignment="Top" Width="174" Background="Black">
+                <ProgressBar x:Name="VolumeBar" Margin="173,1,-171,1" Value="100"  Orientation="Horizontal" Width="172">
                 <ProgressBar.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleX="-1"/>
@@ -28,9 +29,10 @@
                     </LinearGradientBrush>
                 </ProgressBar.Background>
             </ProgressBar>
+            </Border>
         </Grid>
         <Grid x:Name="Devices" Background="White" Height="104" Width="280" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="502,0,10,0" >
-            <ComboBox Name="CbDevices" Height="20" Margin="12,15,12,0" VerticalAlignment="Top">
+            <ComboBox Name="CbDevices" Height="20" Margin="12,12,12,0" VerticalAlignment="Top" SelectionChanged="CbDevices_SelectionChanged" PreviewMouseDown="CbDevices_PreviewMouseDown" IsSynchronizedWithCurrentItem="True" SelectedIndex="0">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
